--- a/.github/workflows/main_gastrobot.yml
+++ b/.github/workflows/main_gastrobot.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -22,17 +22,18 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.11'
 
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      - name: Build Tailwind CSS
+        run: python manage.py tailwind build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -44,6 +45,7 @@ jobs:
           path: |
             release.zip
             !venv/
+
 
   deploy:
     runs-on: ubuntu-latest
