--- a/.github/workflows/main_gastrobot.yml
+++ b/.github/workflows/main_gastrobot.yml
@@ -33,7 +33,11 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Build Tailwind CSS
-        run: python manage.py tailwind build
+
+        run: |
+          source venv/bin/activate
+          cd gastroBot
+          python manage.py tailwind build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
