--- a/.github/workflows/main_gastrobot.yml
+++ b/.github/workflows/main_gastrobot.yml
@@ -32,20 +32,17 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: 📂 Mostrar estructura de carpetas antes de compilar Tailwind
+      - name: Set working dir to repo root
+        working-directory: ${{ github.workspace }}
         run: |
-          echo "Directorio actual: $(pwd)"
-          echo "Contenido actual:"
+          echo "En la raíz correcta"
           ls -la
-          echo "Buscando manage.py:"
-          find . -name manage.py
 
       - name: Build Tailwind CSS
-        run: python manage.py tailwind build
-        working-directory: ${{ github.workspace }}
+        run: python gastrobot/manage.py tailwind build
 
       - name: Collect static files
-        run: python manage.py collectstatic --noinput
+        run: python gastrobot/manage.py collectstatic --noinput
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
